<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PureRoot.Relative"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_marginHorizontal="@dimen/App_Margin_Hor_S"
        style="@style/PureHeader.Scroll"
        >
        <LinearLayout
            style="@style/PureStory.Linear"
            >
            <LinearLayout
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                style="@style/PureStory.Linear.Card"
                >
                <TextView
                    android:id="@+id/tvTitlePF"
                    android:layout_marginVertical="@dimen/App_Margin_Ver_M"
                    style="@style/PureStory.Text.Title"
                    />
                <TextView
                    android:id="@+id/tvContentPF"
                    android:layout_marginBottom="@dimen/App_Margin_Ver_M"
                    style="@style/PureStory.Text.Content.Intro"
                    />
                <LinearLayout
                    android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                    style="@style/PureStory.Linear.Horizontal"
                    >
                    <TextView
                        android:id="@+id/tvLengthLabelPF"
                        android:text="@string/Story_Length_Label"
                        style="@style/PureStory.Text.Footer.Label"
                        />
                    <TextView
                        android:id="@+id/tvLengthPF"
                        android:text="@string/Story_Length_Sample"
                        style="@style/PureStory.Text.Footer"
                        />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                style="@style/PureSelection.Relative"
                >
                <TextView
                    android:text="@string/Font"
                    style="@style/PureSelection.Text"
                    />
                <Spinner
                    android:id="@+id/sFontPF"
                    android:layout_marginEnd="-45dp"
                    android:prompt="@string/Font"
                    style="@style/PureSelection.Spinner.Dropdown"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                style="@style/PureSelection.Relative"
                >
                <TextView
                    android:text="@string/Font_Size"
                    style="@style/PureSelection.Text"
                    />
                <Spinner
                    android:id="@+id/sFontSizePF"
                    android:layout_marginEnd="-45dp"
                    android:prompt="@string/Font_Size"
                    style="@style/PureSelection.Spinner.Dropdown"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvTermsPF"
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                android:text="@string/Terms_Title"
                style="@style/PureButton.Text.Card.Selectable"
                />
            <TextView
                android:id="@+id/tvAboutPF"
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                android:text="@string/About_Title"
                style="@style/PureButton.Text.Card.Selectable"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>