<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PureRoot.Relative"
    tools:ignore="UseCompoundDrawables,ContentDescription"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_marginHorizontal="@dimen/App_Margin_Hor_S"
        style="@style/PureHeader.Scroll"
        >
        <LinearLayout
            android:id="@+id/linearLayoutSF"
            style="@style/PureHeader.Linear"
            >
            <ImageView
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                android:src="@drawable/img_search"
                style="@style/PureHeader.Image"
                />
            <LinearLayout
                android:id="@+id/llPopularStoriesSF"
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                style="@style/PureButton.Linear.Card.Selectable"
                >
                <ImageView
                    android:layout_marginEnd="@dimen/App_Margin_Hor_M"
                    android:src="@drawable/ic_popular_bwhite"
                    style="@style/PureButton.Image"
                    />
                <TextView
                    android:text="@string/Popular_Stories_Title"
                    style="@style/PureButton.Text"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFavoriteStoriesSF"
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                style="@style/PureButton.Linear.Card.Selectable"
                >
                <ImageView
                    android:layout_marginEnd="@dimen/App_Margin_Hor_M"
                    android:src="@drawable/ic_favorite_bwhite"
                    style="@style/PureButton.Image"
                    />
                <TextView
                    android:text="@string/Favorite_Stories_Title"
                    style="@style/PureButton.Text"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRandomStorySF"
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                style="@style/PureButton.Linear.Card.Selectable"
                >
                <ImageView
                    android:layout_marginEnd="@dimen/App_Margin_Hor_M"
                    android:src="@drawable/ic_random_bwhite"
                    style="@style/PureButton.Image"
                    />
                <TextView
                    android:text="@string/Random_Story_Title"
                    style="@style/PureButton.Text"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llSearchSF"
        style="@style/PureHeader.Linear"
        >
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewSF"
            android:layout_margin="@dimen/App_Margin_S"
            app:queryHint="@string/Query_Hint"
            style="@style/PureSearchBar"
            />
        <TextView
            android:id="@+id/tvNoResultSF"
            android:layout_margin="@dimen/App_Margin_S"
            android:text="@string/No_Result"
            android:visibility="gone"
            style="@style/PureInfo.Text.Content.Card"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSF"
        android:layout_marginHorizontal="@dimen/App_Margin_Hor_S"
        android:layout_below="@+id/llSearchSF"
        style="@style/PureStory.Recycler"
        />
</RelativeLayout>