<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.StoryActivity"
    tools:ignore="ContentDescription"
    style="@style/PureRoot.Coordinator"
    >
    <com.google.android.material.appbar.AppBarLayout
        style="@style/PureToolbar.Appbar"
        >
        <Toolbar
            tools:ignore="SpUsage"
            style="@style/PureToolbar.Toolbar.Top"
            >
            <RelativeLayout
                style="@style/PureToolbar.Relative"
                >
                <ImageView
                    android:id="@+id/ivIconSTB"
                    android:layout_marginHorizontal="@dimen/App_Margin_Hor_M"
                    android:src="@drawable/ic_story_bwhite"
                    style="@style/PureToolbar.Image"
                    />
                <TextView
                    android:id="@+id/tvTitleSTB"
                    android:layout_toEndOf="@+id/ivIconSTB"
                    android:text="@string/Story_Title"
                    style="@style/PureToolbar.Text"
                    />
                <CheckBox
                    android:id="@+id/cbFavoriteSTB"
                    android:layout_marginHorizontal="@dimen/App_Margin_Hor_M"
                    android:layout_toStartOf="@+id/cbReadedSTB"
                    android:background="@drawable/selector_favorite"
                    style="@style/PureToolbar.CheckBox"
                    />
                <CheckBox
                    android:id="@+id/cbReadedSTB"
                    android:layout_marginHorizontal="@dimen/App_Margin_Hor_M"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/selector_readed"
                    style="@style/PureToolbar.CheckBox"
                    />
            </RelativeLayout>
        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewSA"
        android:layout_marginHorizontal="@dimen/App_Margin_Hor_S"
        style="@style/PureStory.Scroll"
        >
        <LinearLayout
            style="@style/PureHeader.Linear"
            >
            <FrameLayout
                android:id="@+id/flMobileAdSA_1"
                android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                android:visibility="gone"
                style="@style/PureAd.Frame"
                />

            <LinearLayout
                style="@style/PureStory.Linear.Card"
                >
                <TextView
                    android:id="@+id/tvTitleSA"
                    android:layout_marginVertical="@dimen/App_Margin_Ver_M"
                    style="@style/PureStory.Text.Title"
                    />
                <TextView
                    android:id="@+id/tvContentSA"
                    android:layout_marginBottom="@dimen/App_Margin_Ver_M"
                    style="@style/PureStory.Text.Content"
                    />
                <ImageView
                    android:id="@+id/ivImageSA"
                    android:layout_marginBottom="@dimen/App_Margin_Ver_M"
                    style="@style/PureStory.Image"
                    />
                <LinearLayout
                    android:layout_marginBottom="@dimen/App_Margin_Ver_S"
                    style="@style/PureStory.Linear.Horizontal"
                    >
                    <TextView
                        android:id="@+id/tvAuthorLabelSA"
                        android:text="@string/Story_Author_Label"
                        style="@style/PureStory.Text.Footer.Label"
                        />
                    <TextView
                        android:id="@+id/tvAuthorSA"
                        android:text="@string/Story_Author_Sample"
                        style="@style/PureStory.Text.Footer"
                        />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/flMobileAdSA_2"
                android:layout_marginTop="@dimen/App_Margin_Ver_S"
                android:visibility="gone"
                style="@style/PureAd.Frame"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Toolbar
        style="@style/PureToolbar.Toolbar.Bottom"
        >
        <RelativeLayout
            style="@style/PureToolbar.Relative"
            >
            <ImageView
                android:id="@+id/ivBackSTB"
                android:layout_marginHorizontal="@dimen/App_Margin_Hor_S"
                android:src="@drawable/ic_back_bwhite"
                style="@style/PureToolbar.Image.Selectable"
                />
            <TextView
                android:id="@+id/tvLengthSTB"
                android:layout_marginHorizontal="@dimen/App_Margin_Hor_M"
                android:layout_alignParentEnd="true"
                android:text="@string/Story_Length_Sample"
                style="@style/PureToolbar.Text.Box"
                />
        </RelativeLayout>
    </Toolbar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>